--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </label>
                     <div class="input-field">
                         <i class="fa-solid fa-weight-hanging"></i>
-                        <input type="number" id="weight" required>
+                        <input type="number" step="0.01" id="weight" required>
                         <span>
                             kg
                         </span>
